// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a FormatDate from CivilDate 1`] = `
<div>
  Feb 26, 2020
</div>
`;

exports[`renders a FormatDate from Date 1`] = `
<div>
  Mar 30, 2019
</div>
`;

exports[`renders a FormatDate from ISO8601DateString 1`] = `
<div>
  Mar 30, 2019
</div>
`;
